--- a/gestionUtilisateur/pom.xml
+++ b/gestionUtilisateur/pom.xml
@@ -40,6 +40,13 @@
 		
 		
 		<!-- correction -->
+		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<!-- <version>31.0.1-jre</version>-->
+		</dependency>
+
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
@@ -53,21 +60,21 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<!-- <version>3.12.0</version> -->
+			 <version>3.12.0</version>
 		</dependency>
-		
+
 
 		 <dependency>
 	        <groupId>org.springframework.security</groupId>
 	        <artifactId>spring-security-web</artifactId>
-	        
+
 	    </dependency>
 	    <dependency>
 	        <groupId>org.springframework.security</groupId>
 	        <artifactId>spring-security-core</artifactId>
-	        
+
 	    </dependency>
-	    
+
 
 		<dependency>
 		    <groupId>javax.servlet</groupId>
@@ -103,6 +110,11 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>28.2-android</version>
 		</dependency>
 	</dependencies>
 	<build>
