--- a/gestionUtilisateur/pom.xml
+++ b/gestionUtilisateur/pom.xml
@@ -44,8 +44,16 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<!-- <version>31.0.1-jre</version>-->
+			 <version>31.0.1-jre</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/javax.mail/javax.mail-api -->
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.6.2</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>com.h2database</groupId>
